# cookiecutter-scriptoso

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .flake8  .gitignore  Makefile  Pipfile  README.md  consolecolor.py  data.py  handlers.py  kafkautil.py  logger.py  main.py  pyproject.toml  sample.csv
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: consolecolor.py  data.py  handlers.py  kafka.py  logger.py  tools.py
